; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_tty.c_tty_set_winsize.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_tty.c_tty_set_winsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty = type { i64, %struct.winsize_ }
%struct.winsize_ = type { i32 }

@SIGWINCH_ = common dso_local global i32 0, align 4
@SIGINFO_NIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tty_set_winsize(%struct.tty* %0, i32 %1) #0 {
  %3 = alloca %struct.winsize_, align 4
  %4 = alloca %struct.tty*, align 8
  %5 = getelementptr inbounds %struct.winsize_, %struct.winsize_* %3, i32 0, i32 0
  store i32 %1, i32* %5, align 4
  store %struct.tty* %0, %struct.tty** %4, align 8
  %6 = load %struct.tty*, %struct.tty** %4, align 8
  %7 = getelementptr inbounds %struct.tty, %struct.tty* %6, i32 0, i32 1
  %8 = bitcast %struct.winsize_* %7 to i8*
  %9 = bitcast %struct.winsize_* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %8, i8* align 4 %9, i64 4, i1 false)
  %10 = load %struct.tty*, %struct.tty** %4, align 8
  %11 = getelementptr inbounds %struct.tty, %struct.tty* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %21

14:                                               ; preds = %2
  %15 = load %struct.tty*, %struct.tty** %4, align 8
  %16 = getelementptr inbounds %struct.tty, %struct.tty* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i32, i32* @SIGWINCH_, align 4
  %19 = load i32, i32* @SIGINFO_NIL, align 4
  %20 = call i32 @send_group_signal(i64 %17, i32 %18, i32 %19)
  br label %21

21:                                               ; preds = %14, %2
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @send_group_signal(i64, i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
